# fdms-api

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
apps/core/: urls.py  views.py
apps/farmers/: admin.py  apps.py  models.py
apps/farmers/migrations/: 0001_initial.py
apps/gallery/: admin.py  models.py  urls.py  views.py
apps/gallery/migrations/: 0001_initial.py
apps/tasks/: models.py
apps/tasks/migrations/: 0001_initial.py
apps/tokens/: admin.py  models.py
apps/tokens/migrations/: 0001_initial.py
base/: urls.py
base/settings/: authentication.py  base.py  configuration.py  development.py
